# cz-career-architect

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  ARCHITECTURE_FIXES_COMPLETE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  HOW_TO_TEST.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS_RU.md  MIGRATION_GUIDE.md  Makefile  PRESENTATION_RU.md  PROJECT_ASSESSMENT.md  QUICKSTART.md  README.md  README_RU.md  REFACTORING_SUMMARY.md  TEST_EXECUTION_GUIDE.md  TEST_RESULTS.md  main.py  pyproject.toml  requirements.txt  run_tests.sh  setup.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
base_for_agent_cv/: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CZ_CAREER_ARCHITECT_SYSTEM_PROMPT.md  Dockerfile  README.md  __init__.py  agents.py  api.py  assistant_runner.py  chat.py  config.py  database.py  env_loader.py  factory.py  main.py  package.json  pipeline.py  profile_loader.py  prompts.py  pyproject.toml  requirements_api.txt  requirements_dev.txt  run_api.sh  sdk.py  test-mcp-setup.ts  tsconfig.json  validate-mcp-config.sh
base_for_agent_cv/Schemas/: cz_dentist_cv_v1.1.0_filling_guide.md  metadata_file.schema.json  rules_knowledge_base.json
base_for_agent_cv/app/: main.py  security.py
base_for_agent_cv/app_legacy/: README.md
base_for_agent_cv/frontend/: index.html
base_for_agent_cv/pipeline/: types.py
base_for_agent_cv/profiles/: hr_review_default.yaml  medical_dentist_senior.yaml
base_for_agent_cv/src/: __init__.py  cache.py  chat.py  config.py  exceptions.py  logging_config.py  main.py  metrics.py  rate_limiting.py  validators.py
base_for_agent_cv/tests/: conftest.py  test_analysis.py  test_api.py  test_chat_api_behavior.py  test_chat_file_privacy.py  test_env_loader.py  test_files_api.py  (+4 more)
openclaw-docs/: EXTRACTION_PLAN.md
tests/: conftest.py  test_analysis.py  test_api.py  test_config.py  test_exceptions.py  test_logging.py  test_validators.py
(+300 files in other folders)
